[gd_scene load_steps=20 format=3 uid="uid://dtwrv4qlgeneo"]

[ext_resource type="Script" path="res://plane/plane.gd" id="1_50gcs"]
[ext_resource type="Texture2D" uid="uid://cl0qouhya6ce7" path="res://plane/planesan.png" id="2_fkjgi"]
[ext_resource type="Script" path="res://plane/health_bar.gd" id="3_0xslr"]
[ext_resource type="Script" path="res://plane/planesan.gd" id="3_26gxl"]
[ext_resource type="Script" path="res://plane/health_component.gd" id="4_g1x0u"]
[ext_resource type="AudioStream" uid="uid://dj7jsu7vf3ks4" path="res://audio/cabin_calm.wav" id="6_ocw5u"]
[ext_resource type="AudioStream" uid="uid://duk4p8knkj8gw" path="res://audio/distant seagull.wav" id="7_aqqc4"]
[ext_resource type="AudioStream" uid="uid://k25hi2cdoq6y" path="res://audio/full_screams.wav" id="8_olre1"]
[ext_resource type="Texture2D" uid="uid://boasjee116ulv" path="res://plane/heart.png" id="9_xkcjm"]

[sub_resource type="Animation" id="Animation_g4t8e"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Planesan:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_32w28"]
resource_name = "turbulence"
length = 0.3
loop_mode = 1
step = 0.0333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Planesan:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.0872665, 0.0872665]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yojsp"]
_data = {
"RESET": SubResource("Animation_g4t8e"),
"turbulence": SubResource("Animation_32w28")
}

[sub_resource type="Animation" id="Animation_exeni"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ScreamAudio:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-20.0]
}

[sub_resource type="Animation" id="Animation_sng2h"]
resource_name = "louden_screams"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ScreamAudio:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-20.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dmgut"]
_data = {
"RESET": SubResource("Animation_exeni"),
"louden_screams": SubResource("Animation_sng2h")
}

[sub_resource type="Gradient" id="Gradient_omunm"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0.721569, 0.721569, 0.721569, 0.360784)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_pr7jw"]
gradient = SubResource("Gradient_omunm")

[sub_resource type="Gradient" id="Gradient_s72i8"]
offsets = PackedFloat32Array(0.0352113)
colors = PackedColorArray(1, 0.268772, 0.654902, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_tgsnk"]
gradient = SubResource("Gradient_s72i8")

[node name="Plane" type="CharacterBody2D"]
script = ExtResource("1_50gcs")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-6, -1, 7, -1, 7, 2, -6, 2)

[node name="DamageTimer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_yojsp")
}

[node name="HealthComponent" type="Node" parent="." node_paths=PackedStringArray("heart", "sfx")]
script = ExtResource("4_g1x0u")
heart = NodePath("../Heart")
sfx = NodePath("AudioStreamPlayer2D")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="HealthComponent"]

[node name="HideHealthbarTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 32769
collision_mask = 131

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(-8, -3, -7, -3, -7, -2, -6, -2, -6, -1, -1, -1, -1, -3, 1, -3, 1, -2, 2, -2, 2, -1, 8, -1, 8, 0, 10, 0, 10, 2, 1, 2, 1, 3, 0, 3, 0, 4, -3, 4, -3, 3, -2, 3, -2, 2, -8, 2, -8, 3, -10, 3, -10, 2, -9, 2, -9, 1, -8, 1, -8, 0, -9, 0, -9, -2, -8, -2)

[node name="CabinAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_ocw5u")
autoplay = true
max_polyphony = 2

[node name="SkyAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_aqqc4")
autoplay = true
max_polyphony = 2

[node name="ScreamAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_olre1")
volume_db = -20.0

[node name="AudioAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dmgut")
}

[node name="Planesan" type="Sprite2D" parent="."]
texture = ExtResource("2_fkjgi")
script = ExtResource("3_26gxl")

[node name="HealthBar" type="TextureProgressBar" parent="." node_paths=PackedStringArray("health_comp")]
visible = false
offset_left = -6.0
offset_top = -7.0
offset_right = 7.0
offset_bottom = -6.0
value = 50.0
nine_patch_stretch = true
texture_under = SubResource("GradientTexture2D_pr7jw")
texture_progress = SubResource("GradientTexture2D_tgsnk")
script = ExtResource("3_0xslr")
health_comp = NodePath("../HealthComponent")

[node name="Heart" type="CPUParticles2D" parent="."]
position = Vector2(4, -5)
emitting = false
amount = 1
lifetime = 0.5
one_shot = true
texture = ExtResource("9_xkcjm")
direction = Vector2(0, -1)
spread = 20.0
gravity = Vector2(0, 0)
initial_velocity_min = 13.07
initial_velocity_max = 13.07

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_exited"]
